<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:layoutDirection="rtl"
    android:background="@color/gray_100"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_add_image"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_add"
                app:tint="@color/gray_400"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_add_image"
                android:textColor="@color/gray"/>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category"
        style="@style/MyDenseOutlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cv_add_image"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="20dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAlignment="textStart"
            android:hint="@string/title_hint_category"
            android:textDirection="rtl"
            tools:ignore="RtlHardcoded" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_category"
        android:layout_marginTop="16dp"
        android:text="@string/title_add"
        android:textSize="16sp"
        app:icon="@drawable/ic_add"
        app:iconGravity="textStart"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:iconTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>